# Connectrix

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  data_tree.h  look_and_feel.h  message_queue.h  pch.h  plugin_editor.cpp  plugin_editor.h  plugin_processor.cpp  plugin_processor.h  settings.cpp  settings.h
src/components/: CMakeLists.txt  box_selector.cpp  box_selector.h
src/node_graph/: CMakeLists.txt  node_graph.cpp  node_graph.h
src/node_graph/editor/: CMakeLists.txt  connector.cpp  connector.h  data.h  editor.cpp  editor.h  left_sidebar.cpp  left_sidebar.h
src/node_graph/editor/node/: external_plugin.cpp  external_plugin.h  io_node.cpp  io_node.h  node.cpp  node.h
src/node_graph/internal_plugins/: plugin_format.cpp  plugin_format.h  plugin_instance.cpp  plugin_instance.h
